fixing arrow squish

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
     scroll-behavior: smooth;
     font-family: 'satoshi-medium', sans-serif;
     cursor: auto;
-    overflow-x: hidden;
+    overflow-x: none;
 }
 
 body {
@@ -117,7 +117,11 @@ ul, li {
 #checkout-work {
     margin-top: 2rem;
     width: fit-content;
+}
 
+#checkout-work a{
+    margin-top: 2rem;
+    width: fit-content;
 }
 
 #checkout-work i {
@@ -805,7 +809,7 @@ video{
     @media only screen and (max-width: 700px) {
 
         #header-section h1 {
-            font-size: 2.5rem;
+            font-size: 2rem;
             font-weight: 500;
             width: 100%;
             margin-bottom: 0;
